# OJ

./: CMakeLists.txt  start_oj.bat  stop_oj.bat  讨论区模块使用文档.md  题目管理模块实现说明.md
common/include/oj/: config.h
common/tests/: common_smoke_test.cpp
datas/login/: pom.xml
datas/login/src/main/java/org/example/login/: LoginController.java
discussion/: CMakeLists.txt
discussion/include/: discussion_handler.h  discussion_service.h
discussion/src/: discussion_handler.cpp  discussion_service.cpp  main.cpp
discussion/tests/: test_discussion_service.cpp
docs/: API接口规范.md  架构设计文档.md
judge/: debug_test.cpp
judge/src/: compiler.cpp  main.cpp  sandbox.cpp  submission_handler.cpp
judge/tests/: test_result_judger.cpp  test_sandbox.cpp
management/: README.md  pom.xml  测试说明.md
management/main/java/com/oj/problem/: ProblemManagementApplication.java
management/main/java/com/oj/problem/common/: ApiResponse.java
management/main/java/com/oj/problem/controller/: ProblemController.java
management/main/java/com/oj/problem/dto/request/: ProblemQueryRequest.java  TestCaseRequest.java
management/main/java/com/oj/problem/dto/response/: ProblemDetailResponse.java  ProblemPageResponse.java  (+1 more)
management/main/java/com/oj/problem/entity/: Difficulty.java  TestCaseEntity.java
management/main/java/com/oj/problem/exception/: GlobalExceptionHandler.java
management/main/java/com/oj/problem/repository/: TagRepository.java
management/main/java/com/oj/problem/service/: ProblemService.java
management/main/resources/: application.yml
management/src/main/resources/: application.yml  init-data.sql  schema.sql
management/test/java/com/oj/problem/common/: ApiResponseTest.java
management/test/java/com/oj/problem/exception/: GlobalExceptionHandlerTest.java
management/test/resources/: application-test.yml
模块使用文档/: common模块使用文档.md  评测模块使用文档.md
(+13 files in other folders)
